fixed loading icons being not centered

--- a/src/in-page-ui/sidebar/react/components/result-list.css
+++ b/src/in-page-ui/sidebar/react/components/result-list.css
@@ -5,6 +5,15 @@
     list-style: none;
     width: 97%;
     padding: 0;
+    padding-bottom: 100px;
+}
+
+.loadingBox {
+    width: 100%;
+    display: flex;
+    height: 50px;
+    margin: 30px 0;
+    justify-content: center;
 }
 
 .clusterTime {
