--- a/src/in-page-ui/sidebar/react/components/sidebar.css
+++ b/src/in-page-ui/sidebar/react/components/sidebar.css
@@ -12,6 +12,15 @@
     width: 100%;
 }
 
+.loadingBox {
+    width: 100%;
+    display: flex;
+    height: 50px;
+    margin: 30px 0;
+    justify-content: center;
+}
+
+
 .searchSwitch {
     height: fit-content;
     padding: 0 5px;
